added new question rendering via WebSocket

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -77,5 +77,6 @@
 ul.answers
   = render Answer.with_attached_files.sorted_answers(@question)
 
-.new-answer
-  = render 'answers/form'
+- if user_signed_in?
+  .new-answer
+    = render 'answers/form'
