--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -30,6 +30,8 @@
         - else
           li = link_to link.name, link.url, data: { link: link.id }
 
+    = render 'shared/comments', resource: @question
+
     - if current_user&.author_of?(@question)
       hr
       = link_to 'Edit question', '#', class: 'edit-question-link'
