--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -2,7 +2,7 @@ commentableName = '<%= resource_name(@commentable) %>';
 commentableId = '<%= @commentable.id %>';
 $commentableErrorsBlock = $(`.comment-errors-for-${commentableName}-${commentableId}`);
 
-$($commentableErrorsBlock).html('<%= render 'shared/errors', resource: @commentable %>');
+$($commentableErrorsBlock).html('<%= render 'shared/errors', resource: @comment %>');
 
 <% if @commentable.persisted? %>
   $(`#new-comment-for-${commentableName}-${commentableId} #comment_body`).val('');
