--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -3,4 +3,5 @@ h1.text-center All questions
 ul.all-questions
   = render @questions
 
-p = link_to 'Ask question', new_question_path
+- if can?(:create, Question)
+  p = link_to 'Ask question', new_question_path
