added athorization tests

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -21,7 +21,7 @@
               p.answer-file data-file=file.id
                 = link_to file.filename.to_s, url_for(file)
 
-                - if can?(:destroy, Answer)
+                - if can?(:destroy, answer)
                   = link_to '(Delete)',
                             attachment_path(id: file.id),
                             method: :delete,
@@ -31,7 +31,7 @@
 
         = render 'shared/comments', resource: answer
 
-        - if can?(:best, Answer)
+        - if can?(:best, answer)
           = link_to 'Choose as best answer',
                     best_answer_path(id: answer.id),
                     method: :patch,
@@ -39,7 +39,7 @@
                     class: 'choose-best-answer'
           br
 
-        - if can?(:edit, Answer)
+        - if can?(:edit, answer)
           hr
           = link_to 'Edit answer', '#', class: 'edit-answer-link'
 
@@ -57,7 +57,7 @@
             = render 'shared/links', form: form
           br
 
-        - if can?(:destroy, Answer)
+        - if can?(:destroy, answer)
           = link_to 'Delete answer',
                       answer_path(answer),
                       method: :delete,
