--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -12,3 +12,6 @@
 
     span
       = link_to 'Sign out', destroy_user_session_path, method: :delete
+- else
+  span.ml-2
+    = link_to 'Sign in', new_user_session_path
