subscriptions for question updates

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -73,6 +73,9 @@
                     method: :delete,
                     data:  { confirm: 'Are you sure?' }
 
+      - if can?(:create, Subscription)
+        = render 'subscription'
+
 .answer-errors
   = render 'shared/errors', resource: @answer
 
