--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -1,5 +1,5 @@
-- if can?(:create, Question)
-  nav.ml-2
+nav.navigation.px-4
+  - if can?(:create, Question)
     span.mr-1
       = link_to 'All questions', questions_path
 
@@ -12,6 +12,7 @@
 
     span
       = link_to 'Sign out', destroy_user_session_path, method: :delete
-- else
-  span.ml-2
-    = link_to 'Sign in', new_user_session_path
+
+  - else
+    span
+      = link_to 'Sign in', new_user_session_path
