--- a/app/views/shared/_search.html.slim
+++ b/app/views/shared/_search.html.slim
@@ -7,7 +7,7 @@
 
     select.custom-select.custom-select-sm.my-1 name="option"
       option value="global" selected="selected" Global search
-      option value="questions" Questions
-      option value="answers" Answers
-      option value="users" Users
-      option value="comments" Comments
+      option value="question" Questions
+      option value="answer" Answers
+      option value="user" Users
+      option value="comment" Comments
