--- a/app/views/searches/index.html.slim
+++ b/app/views/searches/index.html.slim
@@ -6,6 +6,6 @@ h3.text-center Search results
   - else
     p Total search results: #{@result.total_entries}
     - @result.each_with_index do |record, index|
-      = p "Record # #{index}"
+      p = "Record # #{index}"
       .record.ml-4
         = render partial: record.class.name.downcase, locals: { record: record }
